package it.petrinet.petrinet.view;

public class PetriNetEditorPane extends AbstractPetriNetPane{
}
